--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -790,21 +790,6 @@ author={
   year={2015},
 }
 
-@misc{tensorflowsoft,
-  author       = {TensorFlow Developers},
-  title        = {TensorFlow},
-  year         = {2021},
-  note         = {{Specific TensorFlow versions can be found in the 
-                   "Versions" list on the right side of this
-                   page.<br>See the full list of authors <a href="htt
-                   ps://github.com/tensorflow/tensorflow/graphs/contr
-                   ibutors">on GitHub</a>.}},
-  publisher    = {Zenodo},
-  version      = {v2.6.0-rc2},
-  doi          = {10.5281/zenodo.5159865},
-  url          = {https://doi.org/10.5281/zenodo.5159865}
-}
-
 @article{randomgrid,
   author  = {James Bergstra and Yoshua Bengio},
   title   = {Random Search for Hyper-Parameter Optimization},
@@ -888,7 +873,7 @@ url = {https://hal.inria.fr/hal-01472932/document}
 
 @inproceedings{jaillet,
   title={Nonstationary Gabor Frames},
-  author={Florent Jaillet and P. Bal{\'a}zs and M. D{\"o}rfler},
+  author={Florent Jaillet and P. Balazs and M. D{\"o}rfler},
   year={2009},
   booktitle={SAMPTA'09, International Conference on SAMPling Theory and Applications},
   url={https://github.com/ltfat/ltfat.github.io/blob/master/notes/ltfatnote010.pdf},
@@ -1584,7 +1569,7 @@ eprint = {https://doi.org/10.1121/1.4986647}
 
 @article{erblet,
   title={The ERBlet transform: An auditory-based time-frequency representation with perfect reconstruction},
-  author={Thibaud Necciari and P. Bal{\'a}zs and Nicki Holighaus and Peter L. S{\o}ndergaard},
+  author={Thibaud Necciari and P. Balazs and Nicki Holighaus and Peter L. S{\o}ndergaard},
   journal={2013 IEEE International Conference on Acoustics, Speech and Signal Processing},
   year={2013},
   pages={498-502},
