--- a/latex/ch1_introduction.tex
+++ b/latex/ch1_introduction.tex
@@ -38,7 +38,7 @@ Figure \ref{fig:stfttradeoff} shows a musical glockenspiel signal analyzed with 
 
 \textcite{dictionary} note that the first use of the STFT was by \textcite{gabor1946} to analyze a speech signal, which used fixed-size Gaussian windows. This was called the Gabor transform, and is now considered a special case of the STFT (\cite{dictionary}).
 
-The constant-Q transform was originally proposed by \textcite{jbrown} to analyze musical signals with a logarithmic frequency scale to better show the relationship between the fundamental frequency of a musical instruments and its harmonics. The resulting transform used long-duration windows in the low frequency regions and short-duration windows in the high frequency regions. The visual comparison of the original constant-Q transform and the Fourier Transform is shown in \ref{fig:violin}. From the use of short windows in the high frequencies, the CQT demonstrates good time resolution (\cite{cqtransient}) in the region of transients and broadband signals, which are important for timbre and instrument identification (\cite{timbretransients1, timbretransients2}).
+The Constant-Q Transform was originally proposed by \textcite{jbrown} to analyze musical signals with a logarithmic frequency scale to better show the relationship between the fundamental frequency of a musical instruments and its harmonics. The resulting transform used long-duration windows in the low frequency regions and short-duration windows in the high frequency regions. The visual comparison of the original Constant-Q Transform and the Fourier Transform is shown in \ref{fig:violin}. From the use of short windows in the high frequencies, the CQT demonstrates good time resolution (\cite{cqtransient}) in the region of transients and broadband signals, which are important for timbre and instrument identification (\cite{timbretransients1, timbretransients2}).
 
 \begin{figure}[ht]
 	\centering
@@ -49,7 +49,7 @@ The constant-Q transform was originally proposed by \textcite{jbrown} to analyze
 	\label{fig:violin}
 \end{figure}
 
-Building on the Gabor transform (or STFT), and using the constant-Q transform as the motivating application, \textcite{balazs} proposed the Nonstationary Gabor transform (NSGT) as a time-frequency transform with a varying time-frequency resolution and a perfect inverse. The NSGT is computed by varying the window size on which the Fourier Transform taken. The NSGT spectrogram of the musical glockenspiel signal is shown in figure \ref{fig:nsgttradeoff}, where one can observe minimal blurriness (or good resolution) in both time and frequency, which is an improvement over the STFT spectrogram seen in figure \ref{fig:stfttradeoff}.
+Building on the Gabor transform (or STFT), and using the Constant-Q Transform as the motivating application, \textcite{balazs} proposed the Nonstationary Gabor transform (NSGT) as a time-frequency transform with a varying time-frequency resolution and a perfect inverse. The NSGT is computed by varying the size of the window on which the Fourier Transform taken. The NSGT spectrogram of the musical glockenspiel signal is shown in figure \ref{fig:nsgttradeoff}, where one can observe minimal blurriness (or good resolution) in both time and frequency, which is an improvement over the STFT spectrogram seen in figure \ref{fig:stfttradeoff}.
 
 \begin{figure}[ht]
 	\centering
@@ -64,7 +64,7 @@ Some music demixing literature (\cite{fitzgerald1, driedger, tftradeoff1, tftrad
 
 Other music demixing systems have been proposed that use the CQT instead of the STFT (\cite{fitzgerald2, cqtseparation, bettermusicsep}). However, these papers used implementations of the CQT which lacked a stable inverse (\cite{lackinverse}), and for which different approximate inversion schemes have been proposed (\cite{klapuricqt, fitzgeraldcqt}). The NSGT is a generalization of the CQT, and can be used to construct a CQT with perfect inverse, or CQ-NSGT (\cite{invertiblecqt, variableq1}). The sliCQ Transform, introduced by \textcite{slicq}, computes the NSGT on slices of the audio signal instead of the entire signal, allowing realtime processing. The NSGT and sliCQ Transform can in practice be constructed with any frequency scale that is monotonically increasing, and can use frequency scales that are appropriate for the task, e.g. musical or psychoacoustic scales.
 
-Additionally, there are papers that describe frequency-warped transforms, with an interest in using nonlinear musical or auditory frequency scales for specific applications (\cite{warped1, warped2, earlywarped1, earlywarped2, warpedcomparison, warpedpsycho}). The NSGT and sliCQ Transform, with their support for arbitrary frequency scales with perfect invertibility, is therefore of interest as the best implementation choice for these various frequency warping schemes, and as a general platform for frequency analysis of audio with nonlinear frequency scales. Finally, the NSGT and sliCQ Transforms have open-source reference implementations in MATLAB\footnote{\url{http://ltfat.org/doc/filterbank/cqt_code.html}} and Python\footnote{\url{https://github.com/grrrr/nsgt}}, allowing for reproducibility and further research.
+Additionally, there are papers that describe frequency-warped transforms, with an interest in using nonlinear musical or auditory frequency scales for specific applications (\cite{warped1, warped2, earlywarped1, earlywarped2, warpedcomparison, warpedpsycho}). The NSGT and sliCQ Transform, with their support for arbitrary frequency scales with perfect invertibility, are therefore of interest as the best implementation choices for these various frequency warping schemes, and as a general platform for frequency analysis of audio with nonlinear frequency scales. Finally, the NSGT and sliCQ Transforms have open-source reference implementations in MATLAB\footnote{\url{http://ltfat.org/doc/filterbank/cqt_code.html}} and Python\footnote{\url{https://github.com/grrrr/nsgt}}, allowing for reproducibility and further research.
 
 In this thesis, \textcite{umx}'s deep neural network for music demixing, which is based on the STFT, will be considered as the starting point. It is chosen for being fully open-source\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} with the intention of encouraging further research. The objective of this thesis is to adapt Open-Unmix to use the sliCQ Transform instead of the STFT. The goal is to present a working music demixing application with the sliCQ Transform as a starting point for future systems that can benefit from application-specific and optimal time-frequency resolution, without needing to write custom frequency warping schemes or being constrained by the fixed-resolution STFT.
 
@@ -72,7 +72,7 @@ In this thesis, \textcite{umx}'s deep neural network for music demixing, which i
 
 The first contribution of this thesis is the adaptation of the reference Python NSGT and sliCQ library\footnote{\url{https://github.com/grrrr/nsgt}} to use PyTorch (\cite{pytorch}), a modern deep learning framework. This allows the NSGT and sliCQ Transforms to be computed on the graphical processing unit (GPU), which due to its capabilities for parallel computing is the preferred device on which to train deep neural networks (\cite{pytorch}). The resulting library, released as open-source software,\footnote{\url{https://github.com/sevagh/nsgt}} allows future researchers to use the NSGT and sliCQ Transform in any GPU-based machine or deep learning model.
 
-The second contribution of this thesis is the adaptation of the reference Open-Unmix\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} neural network for STFT-based music demixing (\cite{umx}) to use the sliCQ Transform. Ideas were also incorporated from CrossNet-OpenUnmix (\cite{xumx}), which is an adaptation Open-Unmix. The final result, named \textit{xumx-sliCQ} and also released as open-source software,\footnote{\url{https://github.com/sevagh/xumx-sliCQ}} was a successful neural network which could perform the task of music source separation using the sliCQ Transform. It scored lower than Open-Unmix and CrossNet-Open-Unmix, but it can act as a starting point for future research. Variations of sliCQ parameters and neural network architectures are among the possible angles for improvement.
+The second contribution of this thesis is the adaptation of the reference Open-Unmix\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} neural network for STFT-based music demixing (\cite{umx}) to use the sliCQ Transform. Ideas were also incorporated from CrossNet-OpenUnmix (\cite{xumx}), which is an adaptation Open-Unmix. The final result, named xumx-sliCQ and also released as open-source software,\footnote{\url{https://github.com/sevagh/xumx-sliCQ}} was a successful neural network which could perform the task of music source separation using the sliCQ Transform. It scored lower than Open-Unmix and CrossNet-Open-Unmix, but it can act as a starting point for future research. Variations of sliCQ parameters and neural network architectures are among the possible angles for improvement.
 
 \subsection{Outline}
 
