--- a/latex/ch4_experiment.tex
+++ b/latex/ch4_experiment.tex
@@ -151,7 +151,7 @@ To maximize result reproducibility, even though table \ref{table:bsseval} descri
 
 \newpagefill
 
-\subsection{Model size and inference performance}
+\subsection{Neural network size and inference performance}
 \label{sec:inferenceperf}
 
 \end{document}
