--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1674,3 +1674,24 @@ pages = {1748-1752},
 title = {Multichannel music separation with deep neural networks},
 doi = {10.1109/EUSIPCO.2016.7760548}
 }
+
+@book{pythonscience,
+author = {Bayen, Alexandre and Kong, Qingkai and Siauw, Timmy},
+title = {Python Programming and Numerical Methods - A Guide for Engineers and Scientists},
+year = {2020},
+publisher = {Elsevier},
+}
+
+@article{whatistensor,
+author = {Kolecki, Joseph},
+year = {2002},
+title = {An Introduction to Tensors for Students of Physics and Engineering}
+}
+
+@inbook{pseudorng,
+author = {L’Ecuyer, Pierre},
+year = {2010},
+title = {Pseudorandom Number Generators},
+isbn = {9780470061602},
+doi = {10.1002/9780470061602.eqf13003}
+}
