--- a/latex/report.tex
+++ b/latex/report.tex
@@ -123,13 +123,13 @@
 \section{References}
 \printbibliography[heading=none]
 
-\newpagefill
-
-\begin{appendices}
-
-\section{Code availability and replicating the results}
-\label{appendix:coderesultsrepro}
-
-\end{appendices}
+%\newpagefill
+%
+%\begin{appendices}
+%
+%\section{Code availability and replicating the results}
+%\label{appendix:coderesultsrepro}
+%
+%\end{appendices}
 
 \end{document}
