--- a/latex/ch2_background.tex
+++ b/latex/ch2_background.tex
@@ -631,6 +631,113 @@ Figure \ref{fig:rnndiags} shows some example RNN architectures, as well as an il
 
 \newpagefill
 
+\subsection{Software and code concepts}
+\label{sec:softcode}
+
+\subsubsection{Python programming language}
+
+Python\footnote{\url{https://www.python.org/}} is a general-purpose programming language. It is an interpreted language,\footnote{\url{https://www.python.org/doc/essays/blurb/}} which means that there is no compilation step required, and the Python code or script written by a user can be executed right away with the Python interpreter. The Python interpreter can also run statements directly for quick prototyping, without needing to write a script:
+
+\begin{listing}[!ht]
+\centering
+\begin{BVerbatim}
+Python 3.9.6 (default, Jul 16 2021, 00:00:00)
+[GCC 11.1.1 20210531 (Red Hat 11.1.1-3)] on linux
+Type "help", "copyright", "credits" or "license" for more information.
+>>>
+>>> print('this is python')
+this is python
+\end{BVerbatim}
+\end{listing}
+
+The Python interpreter is widely distributed on most modern operating systems like Linux, Windows, and OS-X. Python has support for various high-level and user-friendly data structures. Python has seen widespread adoption in academia, and especially in numerical contexts (\cite{pythonscience}).
+
+Some important concepts from the Python language will appear in this thesis and will be described further in this section -- lists, generators, decorators, and random number generator seeding.
+
+The first is the list,\footnote{\url{https://docs.python.org/3/tutorial/datastructures.html\#more-on-lists}} which is a core datastructure of the language. The list in Python corresponds to the array data structure in computer science (\cite{skiena}). It allows for the construction of an ordered list of objects. For example, a discrete-time speech signal may be described by a list of its amplitude values, where the position in the list is the time sample $n$:
+
+\hfil \Verb#speech_signal = [0.15, 0.28, 0.57, 0.98, -0.59]#
+
+The generator is a function in Python which generates the next value of a sequence whenever it is called with the \Verb#yield# statement.\footnote{\url{https://docs.python.org/3/reference/simple_stmts.html\#the-yield-statement}} The internal state of the sequence is managed by the generator function. Generators are used for efficiency, where instead of pre-computing the output of some expensive function for the entire set of values, the expensive function is only executed when a single value is demanded at a time. This is also called lazy evaluation.\footnote{\url{https://cvw.cac.cornell.edu/python/lazy}} An example of a generator is shown in listing \ref{lst:siggen}.
+
+\begin{listing}[ht]
+\centering
+\begin{BVerbatim}
+>>> def speech_signal():
+...     samples = [0.15, 0.28, 0.57, 0.98, -0.59]
+...     for s in samples:
+...             yield expensive_function(s)
+...
+>>> s = speech_signal()
+>>> print(s)
+<generator object speech_signal at 0x7f642933fa50>
+# N.B. expensive function has not been executed yet
+>>>
+>>> for sample in s:
+...     print(sample) # expensive function is computed on demand
+\end{BVerbatim}
+	\caption{A generator in Python, where the expensive function is only called when a value is requested}
+	\label{lst:siggen}
+\end{listing}
+
+The decorator in Python is a single line with a leading \Verb#@# symbol, added on top of a function, to wrap the execution of the function with another.\footnote{\url{https://docs.python.org/3/glossary.html\#term-decorator}} A simple example of a decorator is shown in listing \ref{lst:decorator}.
+
+\begin{listing}[ht]
+\centering
+\begin{BVerbatim}
+>>> def custom_decorator(func):
+...     def wrapper():
+...             print('before')
+...             func()
+...             print('after')
+...     return wrapper
+...
+>>> @custom_decorator
+... def print_hello():
+...     print('hello')
+...
+>>>
+>>> print_hello()
+before
+hello
+after
+\end{BVerbatim}
+	\caption{A decorator in Python}
+	\label{lst:decorator}
+\end{listing}
+
+Decorators are often used to simplify tasks like measuring a function's execution time, or CPU and memory footprint, which is intended to observe or measure but not modify the original function.\footnote{\url{https://pypi.org/project/line-profiler/, https://pypi.org/project/memory-profiler/}}
+
+The \Verb#random# module of Python contains a random number generator (RNG).\footnote{\url{https://docs.python.org/3/library/random.html}} The \Verb#seed# function initializes the random number generator. \footnote{\url{https://docs.python.org/3/library/random.html\#bookkeeping-functions}} This is because the RNG in Python is pseudorandom (\cite{pseudorng}), which means that given the same starting seed, the exact same sequence of numbers are generated deterministically. The random seed is usually a parameter to the script or Python program, such that the user can recreate the same RNG sequences for testing purposes by passing the same seed.
+
+\subsubsection{Numerical and machine learning libraries for Python}
+
+Python has a rich ecosystem of academic libraries. NumPy (\cite{numpy}) and SciPy (\cite{scipy}) are used for numerical computation and parallelized matrix operations that run on the CPU (central processing unit). Pandas (\cite{pandas}) and Seaborn (\cite{seaborn}) are available for data processing. Matplotlib (\cite{matplotlib}) is a plotting library. Tensorflow (\cite{tensorflow}) and PyTorch (\cite{pytorch}) are libraries for machine learning and deep learning, which also have numerical computation and parallelized matrix operations that are similar to NumPy and SciPy, except that they can run on the GPU (graphical processing unit). The use of the GPU allows for more efficient, faster, and larger parallelized matrix operations, which are essential for modern machine learning and deep learning techniques.
+
+In NumPy, the ndarray\footnote{\url{https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html}} is the core datastructure representing an n-dimensional array of objects, which can be numerical (such as int16 or float32) or general objects (such as strings). The same speech signal represented by the Python list above can be represented by a 1-dimensional ndarray of 64-bit floating-point values:
+
+\begin{listing}[!ht]
+\centering
+\begin{BVerbatim}
+>>> import numpy
+>>> speech_signal = numpy.asarray([0.15, 0.28, 0.57, 0.98, -0.59])
+>>> print(speech_signal.dtype)
+float64
+>>> print(speech_signal.shape)
+(5,)
+\end{BVerbatim}
+\end{listing}
+
+The underlying values are stored in formats that allow for efficient numerical computations, which is why using NumPy ndarrays for math is preferred to using regular Python datastructures such as lists that are not designed for speed.
+
+In PyTorch and Tensorflow (and in general machine learning), a similar concept to the ndarray is the tensor. The tensor originates from the field of physics (\cite{whatistensor}). The tensor is essentially the same as an ndarray, or n-dimensional array, and in fact, NumPy ndarrays and PyTorch and Tensorflow tensors are interchangeable.\footnote{\url{https://www.tensorflow.org/guide/tf_numpy}, \url{https://pytorch.org/tutorials/beginner/blitz/tensor_tutorial.html}}
+
+\subsubsection{Version control and git}
+
+\subsubsection{Open-source software and GitHub}
+
+\newpagefill
+
 \subsection{Music source separation}
 \label{sec:musicsep}
 
